# running_app

./: CMakeLists.txt  README.md  backend.cpp  backend.h  main.cpp
qml/: main.qml
